--- a/MarkdownViewer/Properties/Resources.resx
+++ b/MarkdownViewer/Properties/Resources.resx
@@ -118,7 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="fa-search" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fa-search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="HTML_TEMPLATE" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\HTML_TEMPLATE.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="fa-arrow-circle-right" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fa-arrow-circle-right.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
